--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <h1>Contact & Location</h1> <!-- Main heading for page -->
     </header>
     <section class="image-container">
-        <img src="_on.jpg" alt="Our Location Image" width="1000" height="200" > <!-- image for contact us -->
+        <img src="contact.avif" alt="Our Location Image" width="1000" height="200" > <!-- image for contact us -->
 
     </section>
 
