--- a/offer.html
+++ b/offer.html
@@ -50,7 +50,7 @@
         <div class="button-container">
             <button onclick="window.location.href='menu.html'">Our Menu</button><!-- Button for menu page -->
             <button onclick="window.location.href='nutrition.html'">Calories</button><!-- Button for nutrition page -->
-            <button onclick="window.location.href='Contact.html'">Contact & Location</button><!-- Button for contact page -->
+            <button onclick="window.location.href='contact.html'">Contact & Location</button><!-- Button for contact page -->
         </div>
         
         <footer>
